--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ondrip-extension-ts",
+  "name": "ondrip-extension",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.5",
     "add": "^2.0.6",
     "bootstrap": "4.3.1",
+    "ethers": "^5.6.9",
     "jquery": "3.5.1",
     "yarn": "^1.22.19"
   }
