--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.3.1",
     "ethers": "^5.6.9",
     "jquery": "3.5.1",
+    "lit-js-sdk": "^1.1.198",
     "yarn": "^1.22.19"
   }
 }
