--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack/webpack.prod.ts",
-    "start": "webpack --watch --progress  --config webpack/webpack.dev.ts"
+    "build": "yarn codegen && webpack --config webpack/webpack.prod.ts",
+    "start": "webpack --watch --progress  --config webpack/webpack.dev.ts",
+    "graphql-gen": "apollo service:download --endpoint=https://api.thegraph.com/subgraphs/name/thisisommore/ondrip-subgraph ./src/common/graph-ql/graphql-schema.json && apollo codegen:generate --localSchemaFile=./src/common/graph-ql/graphql-schema.json --target=typescript --tagName=gql",
+    "codegen": "yarn graphql-gen"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "^0.0.193",
     "@types/glob": "^7.2.0",
+    "@types/graphql": "^14.5.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^18.0.3",
     "@types/webpack": "^5.28.0",
+    "apollo": "^2.34.0",
     "copy-webpack-plugin": "^11.0.0",
     "glob": "^8.0.3",
     "ts-loader": "^9.3.1",
@@ -22,6 +26,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@popperjs/core": "^2.11.5",
     "add": "^2.0.6",
     "bootstrap": "4.3.1",
